# digitalTwin-airQuality

./: README.md
docs/: architecture.md
urban_air_quality_digital_twin/: .gitignore  DIGITAL_TWIN_CONCEPT.md  LLM_USAGE_SUMMARY.md  README.md  SETUP.md  pyproject.toml  requirements.txt  start_app.py
urban_air_quality_digital_twin/backend/: __init__.py  api.py  llm_config.py  run_agents.py  test_tools.py
urban_air_quality_digital_twin/backend/config/: agents.yaml  tasks.yaml
urban_air_quality_digital_twin/backend/tools/: __init__.py  data_fetcher.py  data_server.py  prediction.py  preprocess.py  run_pipeline.py
urban_air_quality_digital_twin/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
urban_air_quality_digital_twin/frontend/src/: App.tsx
urban_air_quality_digital_twin/frontend/src/Analysis/: mockData.ts
urban_air_quality_digital_twin/frontend/src/components/: Analysis.tsx  Dashboard.tsx  ForecastChart.tsx  HistoricalChart.tsx  LLMAnalysis.tsx  MapView.tsx  ScenarioSliders.tsx
urban_air_quality_digital_twin/frontend/src/services/: api.ts
urban_air_quality_digital_twin/src/backend/: __init__.py  llm_config.py
urban_air_quality_digital_twin/src/backend/tools/: data_server.py
urban_air_quality_digital_twin/src/frontend/Dashboard/: package-lock.json  package.json  vite.config.ts
urban_air_quality_digital_twin/src/urban_air_quality_digital_twin/: run_agents.py
urban_air_quality_digital_twin/src/urban_air_quality_digital_twin/config/: agents.yaml  scenario_profiles.json  tasks.yaml
(+34 files in other folders)
